modules/securitygroup/main.tf
#Ecrivez un module pour créer une security qui ouvrira le 80 et 443
#Fournit une ressource de groupe de sécurité
resource "aws_security_group" "myec2-sg" {
  name        = "${var.product}.${var.environment}-myec2-sg"
  description = "Allow ssh http https traffic"
  ingress {
    description = "TLS from VPC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "http from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "ssh from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    description = "Allow all port"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.product}.${var.environment}-myec2-sg"
  }
}
